making the books array list modifiable